<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearlayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/email_et"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:id="@+id/user_email"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/password_et"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:id="@+id/user_password"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_gravity="center_horizontal"
            android:onClick="logInPressed"/>

    </LinearLayout>

    <View
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:layout_gravity="center_horizontal"
            android:onClick="signUpPressed"/>

    </LinearLayout>


</LinearLayout>