<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_margin="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_sign"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_name"
            android:hint="@string/signup_name"
            android:layout_gravity="start"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_email"
            android:hint="@string/signup_email"
            android:layout_gravity="start"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_password"
            android:hint="@string/signup_password"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

    </LinearLayout>



</LinearLayout>